# otimisto

./: shell.nix
SchedSynth/: .gitignore  Cargo.toml
SchedSynth/scripts/: .gitignore  get_halide.sh  hole_infer.py  interface.sh
SchedSynth/scripts/apps/: bilateral_gird_in  bilateral_gird_splits  bilateral_grid_out  blur_in  blur_out  blur_splits  conv_layer_in  conv_layer_out  conv_layer_splits  harris_in  harris_out  harris_splits  iir_blur_in  iir_blur_out  iir_blur_splits  local_laplacian_in  local_laplacian_out  nl_means_in  nl_means_out  nl_means_splits  resize_in  resize_out  resize_splits  stencil_chain_in  stencil_chain_out  unsharp_in  unsharp_out  unsharp_splits  wavelet_in  wavelet_out
SchedSynth/scripts/preprocessor/: preprocess.py
SchedSynth/scripts/tests/: bilateral_grid_1.c  bilateral_grid_2.c  blur_1.c  blur_1_generated.c  blur_1_generated_target.c  blur_1_orig  blur_1_reshapes  blur_1_sched_output  blur_1_targ  blur_2.c  build.sh  camera_pipe.c  camera_pipe_generated.c  camera_pipe_orig  camera_pipe_out  camera_pipe_targ  conv_layer.c  conv_layer_generated.c  conv_layer_generated_target.c  conv_layer_generator.cpp  conv_layer_orig  conv_layer_reshapes  conv_layer_sched_output  conv_layer_targ  list  local_laplacian.c  local_laplacian_2.c  local_laplacian_3.c  local_laplacian_4.c  run.sh  three_dimensional_consumer_generated.c
SchedSynth/src/: .gitignore  improved_syntax  main.rs  test_input  test_out
SchedSynth/src/ast/: analysis.rs  ast.rs  convert.rs  mod.rs  reorder_infer.rs  split_infer.rs
SchedSynth/src/holes/: holes.rs
(+19 files in other folders)
