[package]
name = "SchedSynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2"}
pest_derive = { version = "2"}
lazy_static = "1.4"
clap = "3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
